manifests/adminer/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adminer
  labels:
    kubernetes.io/metadata.name: adminer
